API INTEGRATION USER AND ROLE

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-
+<script src="assets/env/env.js"></script>
 <body>
 
     <!-- Splash screen -->
