committed index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Police IT V2</title>
+    <title>RRMS</title>
     <meta charset="utf-8">
     <meta name="description"
         content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
